@@ -1,3 +1,7 @@
+Tue Nov 20 03:34:28 2007  Jiri (George) Lebl <jirka@5z.com>
+
+	* src/gnome-genius.c: set up our icon on all windows
+
 Tue Nov 20 03:22:14 2007  Jiri (George) Lebl <jirka@5z.com>
 
 	* src/mpwrap.c: saner algorithm to figure out when to print in
